# config

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  codama.mjs  package.json  pnpm-lock.yaml  vars.env
clients/rust/: Cargo.toml  README.md
clients/rust/src/: instructions_bincode.rs  lib.rs
clients/rust/src/hooked/: mod.rs  (+1 more)
clients/rust/tests/: create.rs
interface/: Cargo.toml
interface/src/: instruction.rs  lib.rs  state.rs
program/: Cargo.toml  README.md  idl.json
program/benches/: compute_units.md  compute_units.rs  setup.rs
program/benches/compute_units/: main.rs  setup.rs
program/fuzz/: instr-29JCdK6me16AB1W83UtGSRmyY9ne3a4V68EFV6QjPjpY.fix  instr-29JCdK6me16AB1W83UtGSRmyY9ne3a4V68EFV6QjPjpY.json  instr-2piKspqwSaFr12UedbqQGjmkvvQNe9pU7hEqrpDNYdUY.fix  instr-2piKspqwSaFr12UedbqQGjmkvvQNe9pU7hEqrpDNYdUY.json  instr-4JxyknJRuvbZZTbCw62rMw6DjWJ6zcyf276acbxgAX5T.fix  instr-4JxyknJRuvbZZTbCw62rMw6DjWJ6zcyf276acbxgAX5T.json  instr-4W7GEfHE9fNysqdB1CD6u4PG8xCskw77YkmBNzkFBh6u.fix  instr-4W7GEfHE9fNysqdB1CD6u4PG8xCskw77YkmBNzkFBh6u.json  instr-4muQyrE6yDQ6L3Je3L1mrGSpX9wgC6Ynez3iEjSgCqdE.fix  instr-4muQyrE6yDQ6L3Je3L1mrGSpX9wgC6Ynez3iEjSgCqdE.json  instr-5R4wAscjZqvT8LPBTSy7i1X4gNGHs6dPwmG12KdZ1qgH.fix  instr-5R4wAscjZqvT8LPBTSy7i1X4gNGHs6dPwmG12KdZ1qgH.json  instr-5XU19EjxjHSoQkSbc3SAnVVheYzPBS1abSaT6AJf6rFS.fix  instr-5XU19EjxjHSoQkSbc3SAnVVheYzPBS1abSaT6AJf6rFS.json  instr-6gtnwedBvr7PUBoBke2xPQEDJTk3sXqPEWjB4JABKgTi.fix  instr-6gtnwedBvr7PUBoBke2xPQEDJTk3sXqPEWjB4JABKgTi.json  instr-7BdYC9BffvQSkXdMBaJie8UwmLhFQFs7khsKhF9dwsTk.fix  instr-7BdYC9BffvQSkXdMBaJie8UwmLhFQFs7khsKhF9dwsTk.json  instr-7QbbKkXUA4qaDm5xDw223EWBtJ3mF6BkP86GVahAurb9.fix  instr-7QbbKkXUA4qaDm5xDw223EWBtJ3mF6BkP86GVahAurb9.json  instr-7jdzU836PMqKSSP6sFR3Vu3g1NzTzz6G3bmGW27KXuiV.fix  instr-7jdzU836PMqKSSP6sFR3Vu3g1NzTzz6G3bmGW27KXuiV.json  instr-8NKpBxjNvbrM5LZRGrzZ47kgndJyAiMKHmfHLbMJ7pU4.fix  instr-8NKpBxjNvbrM5LZRGrzZ47kgndJyAiMKHmfHLbMJ7pU4.json  instr-8aRqob8poM81k752jtFMyQA1UisAgvxjbRicz7WoGyK.fix  instr-8aRqob8poM81k752jtFMyQA1UisAgvxjbRicz7WoGyK.json  instr-8vxmHtn3jcQpAtNcEugwWeeRXN1dvi5pvdti1MpzSv9V.fix  instr-8vxmHtn3jcQpAtNcEugwWeeRXN1dvi5pvdti1MpzSv9V.json  instr-AQpSFdzKcVikoLmo6oigX4g44bkXrPxqy9k1oqqeHVDF.fix  instr-AQpSFdzKcVikoLmo6oigX4g44bkXrPxqy9k1oqqeHVDF.json  instr-BTMbmddyeeQZcbL4L9b47E4CoxjKvGy6qBgRToMGcoqi.fix  instr-BTMbmddyeeQZcbL4L9b47E4CoxjKvGy6qBgRToMGcoqi.json  instr-CC2b4395ySvGeR9C2TqMLFAGGSZWJDugzKci16id4LbP.fix  instr-CC2b4395ySvGeR9C2TqMLFAGGSZWJDugzKci16id4LbP.json  instr-CaQYSeaard64edq4pJeRYULyVfcvMfLgKNsimAr9aXbE.fix  instr-CaQYSeaard64edq4pJeRYULyVfcvMfLgKNsimAr9aXbE.json  instr-CueP3yU1ggFJxadGywEPTtpKwPamP8iqxP65RLj2rnM8.fix  instr-CueP3yU1ggFJxadGywEPTtpKwPamP8iqxP65RLj2rnM8.json  instr-Dr4YQAYUDgmKQ4kMqpV3Nh3HbcH5nsewL1eFMRnUh3fQ.fix  instr-Dr4YQAYUDgmKQ4kMqpV3Nh3HbcH5nsewL1eFMRnUh3fQ.json  (+6 more)
program/fuzz/blob/: instr-21SRqq2L8jD9zxFAsNMfhYzXZbZLe3vQYHvrcpd3bGJs.fix  instr-2KjD2jZYxY7EJ5Q6HfSzUvcT56HR2daCVCUPrvHgCf92.fix  instr-2wBW9qiu9iUcMEarmaMVxQjG8FXnnS9U1Krjb2WzukRK.fix  instr-33HkrkAxmXUSzeQmfbctjH3wmuFDuv8LUPkqPWDnGy1A.fix  instr-3SaNtcwAXZtP4sD32tGHhTJ23Vq1dQZd8HP4apdRJEW8.fix  instr-3TQ56WgKYG9Nu89fva3NJPLAqVmrtUUYsxW4iDwKGwRV.fix  instr-3m2498skEEeG6mixVMiFMghMsW69vLxE3WZDBZbZ2YLu.fix  instr-4MXZV8fsTx6ATcmZokfs6FkoZtP86Lsx4c7rGvDJHNcP.fix  instr-4PbYdhhqbiWvX6zA8jPYDLArAqUuea5tAbGdwj4SBKxP.fix  instr-4WyuJP6gdRrFSUzcV3eh8FRAX6F8kaFJ6iQrKEJZo9dJ.fix  instr-4bWSkmqdJYLmHJGUnDfGYqiFyxrWz5ZHmwC8SydtVKSr.fix  instr-4yUmPnaKWbai7tsyTXcJ8ebXELcoSS42Pnpfs4Fo6k7X.fix  instr-5akoKHC1uFCeDh8DVy67pg5oR8TXBYbu55ygJrQ3bjcV.fix  instr-5fvzAgZTVnMsCcWXiYcGybfiajXNNGuW4aUi97Bn9vZW.fix  instr-5hK5s9zSxYKCtashmvbXdUee3iopoY2AT5NbRN5Pkw6X.fix  instr-5tunBwUEmntMnmCCkyQyBjaDcsbHNB7y1u9tZvKvB4td.fix  instr-5v6rSmwQPBWVZcQqnC2kHiAbcMVUyYWB9rtH4Xa5GWxD.fix  instr-6VkKo7HLBh8pG1hX49UbCMcFiFtMBc5bLopFmhXhmjnb.fix  instr-6XJjT41VhTuZ2P6MLGDHUfcHsFAwwenGTUg2SUNv2qbm.fix  instr-79RkdkycmdJwekcMX1LKojJGm4MdBs9dAGJrF6aRzS7t.fix  instr-7oHsHkJS1NmcMdnRmCEBUb6gnzpGiUVcryfUVQqqopbY.fix  instr-8QCvcJ6KK8XLRRmSdF7XEt1rDrxgo2Y6NsNdCx5Sn56y.fix  instr-8QHrV1v7MdGAjWet7hao9aPRdG5zXQvuFJ4ykgHqzXX7.fix  instr-9WQFiBjSX46Mco8r846KQgcjdJY3cnS9dmg3xcqfLctR.fix  instr-9ZiGw4dcHyApyyAP2C2FiETvhJgwgac3TfySVr6j4KFX.fix  instr-9rT38Vq1WC93NmKDFUrrsrUb3rDPStc5pTKpdazam5S8.fix  instr-9yzQF1cY4h3pPTNPFQBrVQWg82hBbmNYYevdKMsTKtQw.fix  instr-A4XCrXBGG2xPgJug6zd9yJNoPnCNakFZfVZFhnKitZfA.fix  instr-AFxrn9FdLP6ut6yxGf5bJQXmeqjWsZKVcWTC6r2Xt1am.fix  instr-AHSWHeimAR4tMzk3jJEaoQMgWtTjxbPVjxQmb2gFLuTD.fix  instr-AphN3pjsCssNL4s9KVTJLpaWRNPG4RwsG7SjTuLjf482.fix  instr-BwozH1BcJXpRPoY2aAp7eGfK1wW22AG6AdY6P49Fd8Ze.fix  instr-C2En8PHpJ9sRq8eaXfNHy2yMUDYBCSzyLFnp1dcK6uJa.fix  instr-C61sjydxHSUjBbjwNP3MszwoXWqin8BB9tMAyzjjHmse.fix  instr-CFxrWbVXwzVw6Xf5GTZFXxMh3yhwAHn7JZW2Vrz7fenD.fix  instr-CbTw1Jriqx5ytoqgAWg3LNLPrgB2NZLeBRyRagitseYE.fix  instr-CmJnMvFwmwtfTWCRt3ttEDBANPLV5jkPx8nyyTicVz6Y.fix  instr-CnWLVMQuoqK463NAJzMzZYvWvkH3HYXuSdEesKv3NNjE.fix  instr-D2M645LEwhLFh74Ng9MPRXtotHHJPdjaeueMjTkkaNp6.fix  instr-DaLopwWLjmuZWWBiCyHACkVHVVicWbn1TpogyNGHQxVB.fix  (+26 more)
program/fuzz/json/: instr-21SRqq2L8jD9zxFAsNMfhYzXZbZLe3vQYHvrcpd3bGJs.json  instr-2KjD2jZYxY7EJ5Q6HfSzUvcT56HR2daCVCUPrvHgCf92.json  instr-2wBW9qiu9iUcMEarmaMVxQjG8FXnnS9U1Krjb2WzukRK.json  instr-33HkrkAxmXUSzeQmfbctjH3wmuFDuv8LUPkqPWDnGy1A.json  instr-3SaNtcwAXZtP4sD32tGHhTJ23Vq1dQZd8HP4apdRJEW8.json  instr-3TQ56WgKYG9Nu89fva3NJPLAqVmrtUUYsxW4iDwKGwRV.json  instr-3m2498skEEeG6mixVMiFMghMsW69vLxE3WZDBZbZ2YLu.json  instr-4MXZV8fsTx6ATcmZokfs6FkoZtP86Lsx4c7rGvDJHNcP.json  instr-4PbYdhhqbiWvX6zA8jPYDLArAqUuea5tAbGdwj4SBKxP.json  instr-4WyuJP6gdRrFSUzcV3eh8FRAX6F8kaFJ6iQrKEJZo9dJ.json  instr-4bWSkmqdJYLmHJGUnDfGYqiFyxrWz5ZHmwC8SydtVKSr.json  instr-4yUmPnaKWbai7tsyTXcJ8ebXELcoSS42Pnpfs4Fo6k7X.json  instr-5akoKHC1uFCeDh8DVy67pg5oR8TXBYbu55ygJrQ3bjcV.json  instr-5fvzAgZTVnMsCcWXiYcGybfiajXNNGuW4aUi97Bn9vZW.json  (+52 more)
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs
(+37 files in other folders)
