[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
    "program",
]

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/config"
readme = "./README.md"
license-file = "./LICENSE"
edition = "2021"

[workspace.dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
borsh = "0.10"
kaigan = "0.2.5"
mollusk-svm = "0.4.2"
mollusk-svm-bencher = "0.4.0"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.193"
serde_derive = "1.0.193"
solana-account = "2.2.1"
solana-client = "2.3.4"
solana-config-interface = { version = "1.0.0" }
solana-instruction = "2.2.1"
solana-program = "2.2.1"
solana-pubkey = "2.2.1"
solana-sdk = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-short-vec = "2.2.1"
solana-system-interface = "1.0.0"
thiserror = "1.0.61"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"
