[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
    "program",
]

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/config"
readme = "./README.md"
license-file = "./LICENSE"
edition = "2021"

[workspace.dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
borsh = "1.5"
kaigan = "0.2.6"
mollusk-svm = "0.7.0"
mollusk-svm-bencher = "0.7.0"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.228"
serde_derive = "1.0.193"
solana-account = "3.1.0"
solana-account-info = "3.0.0"
solana-bincode = "3.0.0"
solana-client = "2.3.4"
solana-config-interface = { version = "2.0.0" }
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-msg = "3.0.0"
solana-program = "2.0.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk = "2.0.0"
solana-sdk-ids = "3.0.0"
solana-short-vec = "3.0.0"
solana-system-interface = "2.0.0"
solana-rent = "3.0.0"
thiserror = "2.0.17"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"
