[package]
name = "solana-config-interface"
description = "Solana config program interface."
documentation = "https://docs.rs/solana-config-interface"
version = "2.0.0"
authors = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-account = { version = "3.0.0", optional = true }
solana-instruction = { version = "3.0.0", optional = true, features = [
    "bincode",
] }
solana-pubkey = { version = "3.0.0" }
solana-sdk-ids = { version = "3.0.0" }
solana-short-vec = { version = "3.0.0", optional = true }
solana-system-interface = { version = "2.0.0", optional = true, features = [
    "bincode",
] }

[features]
bincode = [
    "dep:bincode",
    "dep:solana-account",
    "dep:solana-instruction",
    "dep:solana-system-interface",
    "serde",
]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "dep:solana-short-vec",
    "solana-pubkey/serde",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
