[package]
name = "solana-config-program"
version = "3.0.0"
description = "Solana Config Program"
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/config"
readme = "../README.md"
license-file = "../LICENSE"
edition = "2021"

[package.metadata.solana]
program-id = "Config1111111111111111111111111111111111111"

[features]
bpf-entrypoint = []
test-sbf = []

[dependencies]
bincode = "1.3.3"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
solana-program = "2.0.1"
thiserror = "1.0.61"

[dev-dependencies]
mollusk-svm = { version = "0.0.10-solana-2.0", features = ["fuzz-fd"] }
mollusk-svm-bencher = "0.0.10-solana-2.0"
solana-sdk = "2.0.1"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
