[package]
name = "solana-config-program"
version = "3.0.0"
description = "Solana Config Program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[package.metadata.solana]
program-id = "Config1111111111111111111111111111111111111"

[features]
bpf-entrypoint = []
test-sbf = []

[dependencies]
bincode = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-config-interface = { workspace = true, features = ["serde"] }
solana-program = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true, features = ["fuzz"] }
mollusk-svm-bencher = { workspace = true }
solana-config-interface = { workspace = true, features = ["bincode", "serde"] }
solana-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
