[package]
name = "solana-config-program"
version = "3.0.0"
description = "Solana Config Program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[package.metadata.solana]
program-id = "Config1111111111111111111111111111111111111"

[dependencies]
bincode = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-account-info = { workspace = true }
solana-bincode = { workspace = true }
solana-config-interface = { workspace = true, features = ["serde"] }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-short-vec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true, features = ["fuzz"] }
mollusk-svm-bencher = { workspace = true }
solana-account = { workspace = true }
solana-config-interface = { workspace = true, features = ["bincode", "serde"] }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-rent = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
