[package]
name = "solana-config-program-client"
version = "0.0.0"
description = "A generated Rust library for the Config program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[features]
test-sbf = []
serde = ["dep:serde"]

[dependencies]
borsh = { workspace = true }
kaigan = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"], optional = true }
solana-program = { workspace = true, features = ["borsh"] }

[dev-dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
solana-sdk = { workspace = true }
