[package]
name = "solana-config-program-client"
version = "0.0.2"
description = "A generated Rust library for the Config program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[features]
fetch = ["dep:solana-client", "dep:solana-sdk"]
serde = ["dep:bincode", "dep:serde", "kaigan/serde"]
test-sbf = []

[dependencies]
bincode = { workspace = true, optional = true }
borsh = { workspace = true }
kaigan = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
solana-client = { workspace = true, optional = true }
solana-program = { workspace = true, features = ["borsh"] }
solana-sdk = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
solana-sdk = { workspace = true }
